# rustkick

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.local.json
docs/design/: 0001Phase1Graphicalpitchenvelopeeditorwithdragha.patch  0001Phase2Punchlayersecondoscillatorforpercussive.patch  0001Phase3Bodycompressorfordensityandpumpingchar.patch  0001ResetallDSPstateoneachnotetriggertoeliminat.patch  step1.osc.md  step10harderkick.patch  step11fixpopui.patch  step12fixidsoverlap.patch  step2.distortion.md  step23.patch  step2distortion.patch  step3.eq.md  step3only.patch  step4.pitch-transient.md  step4only.patch  step5lrcrossover.patch  step6limiter.patch  step7oversampling.patch  step8presetsexport.patch  step9uimakeover.patch
src/: editor.rs  lib.rs  main.rs  params.rs  presets.rs  render.rs
src/dsp/: compressor.rs  distortion.rs  envelope.rs  filter.rs  limiter.rs  mod.rs  noise.rs  osc.rs  oversample.rs
